# unogenerator

./: .gitattributes  .gitignore  DOCKER.md  Dockerfile  INSTALL.md  MANIFEST.in  PROBLEMS.md  README.md  benchmark.py  client.py  localc.py  lowriter.py  lowriter_standard.py  pregunta.py  pruebasetcolors.ods  pruebasetcolors.py  pyproject.toml  server.sh  setup.py  unogenerator.epj
.github/workflows/: python-app.yml
doc/: Doxyfile  index.dox  unogenerator_documentation_en.odt  unogenerator_documentation_es.odt  unogenerator_example_en.ods  unogenerator_example_es.ods
init.d/: unogenerator  unogenerator.conf
locale/: es.po  unogenerator.pot
scripts/: pregunta.py  setcolorsincells.py
tests/: benchmark.py  colorscale.ods  conftest.py  get_values.py  metadata.py  optimize_addrowwithstyles.py  percentil_color.py  pregunta.py  pruebasetcolors.py  test_commons.py  test_demo.py  test_helpers.py  test_odt.py  test_server.py  test_server_crash_cleanup.py  test_statistics.py  test_unogenerator.py  with.py
unogenerator/: __init__.py  can_import_uno.py  commons.py  currency.py  daemon.py  demo.py  exceptions.py  helpers.py  monitor.py  percentage.py  poethepoet.py  server.py  statistics.py  translation.py  unogenerator.py
unogenerator/locale/: en.po  es.po  fr.po  ro.po  unogenerator.pot
unogenerator/locale/en/LC_MESSAGES/: unogenerator.mo
unogenerator/locale/es/LC_MESSAGES/: unogenerator.mo
unogenerator/locale/fr/LC_MESSAGES/: unogenerator.mo
unogenerator/locale/ro/LC_MESSAGES/: unogenerator.mo
unogenerator/reusing/: __init__.py  casts.py  currency.py  datetime_functions.py  decorators.py  file_functions.py  github.py  libmanagers.py  listdict_functions.py  percentage.py
unogenerator/templates/: additionalstyles.odt  colored.ods  standard.ods  standard.odt
unogenerator/templates/odt/: standard.odt
