[tool.poetry]
name = "unogenerator"
version = "0.40.0"
description = "Libreoffice files generator programmatically with python and Libreoffice server instances"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<4"
tqdm = ">=4.66.2"
humanize = ">=4.10.0"
colorama = ">=0.4.6"
polib = ">=1.2.0"
psutil = ">=6.0.0"
pydicts = ">=0.16.0"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.3"
poethepoet = ">=0.27.0"
pytest = ">=8.2.2"
coverage = ">=7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unogenerator_demo='unogenerator.demo:main'
unogenerator_demo_concurrent='unogenerator.demo:main_concurrent'
unogenerator_start='unogenerator.server:server_start'
unogenerator_stop='unogenerator.server:server_stop'
unogenerator_monitor='unogenerator.server:monitor'
unogenerator_translation='unogenerator.translation:main'

[tool.poe.tasks]
coverage = { script = "unogenerator.poethepoet:coverage" }
documentation = { script = "unogenerator.poethepoet:documentation" }
test = { script = "unogenerator.poethepoet:test" }
release = { script = "unogenerator.poethepoet:release" }
reusing = { script = "unogenerator.poethepoet:reusing" }
translate = { script = "unogenerator.poethepoet:translate" }
docker = { script = "unogenerator.poethepoet:docker" }
docker_build = { script = "unogenerator.poethepoet:docker_build" }

[project.urls]
homepage = "https://github.com/turulomio/unogenerator/"
repository = "https://github.com/turulomio/unogenerator/"
changelog = "https://github.com/turulomio/unogenerator#changelog"
